<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <ImageView
            android:id="@+id/ivLeft"
            android:layout_width="@dimen/title_height"
            android:layout_height="@dimen/title_height"
            android:scaleType="centerInside"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/size_100dp"
            android:layout_height="@dimen/size_100dp"
            android:src="@drawable/logo"
            app:layout_constraintTop_toBottomOf="@+id/ivLeft"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <ImageView
            android:id="@+id/ivSlogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_slogan"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo"/>
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:drawablePadding="@dimen/size_6dp"
            android:padding="@dimen/size_8dp"
            android:gravity="center_vertical"
            android:maxLength="@integer/username_max_length"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:background="@drawable/edit_bg_line_selector"
            android:drawableLeft="@drawable/ic_user"
            android:drawableRight="@drawable/btn_clear_selector"
            android:hint="@string/hint_username"
            app:layout_constraintTop_toBottomOf="@+id/ivSlogan"/>
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:drawablePadding="@dimen/size_6dp"
            android:padding="@dimen/size_8dp"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:maxLength="@integer/password_max_length"
            android:background="@drawable/edit_bg_line_selector"
            android:drawableLeft="@drawable/ic_password"
            android:drawableRight="@drawable/btn_clear_selector"
            android:hint="@string/hint_new_password"
            app:layout_constraintTop_toBottomOf="@+id/etUsername"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:drawablePadding="@dimen/size_6dp"
            android:padding="@dimen/size_8dp"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:maxLength="@integer/password_max_length"
            android:background="@drawable/edit_bg_line_selector"
            android:drawableLeft="@drawable/ic_password"
            android:drawableRight="@drawable/btn_clear_selector"
            android:hint="@string/hint_confirm_password"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:layout_marginTop="@dimen/size_30dp"
            android:textColor="@color/white"
            android:text="@string/register"
            android:textSize="@dimen/size_16sp"
            android:background="@drawable/btn_bg_selector"
            app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword"
            style="?android:attr/borderlessButtonStyle"/>
        <TextView
            android:id="@+id/tvExistAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/size_8dp"
            android:paddingBottom="@dimen/size_8dp"
            android:layout_marginTop="@dimen/size_10dp"
            android:gravity="center_vertical"
            android:textColor="@color/text_6"
            android:text="@string/label_exist_account"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tvLogin"/>
        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/size_8dp"
            android:paddingBottom="@dimen/size_8dp"
            android:layout_marginTop="@dimen/size_10dp"
            android:gravity="center_vertical"
            android:textColor="@color/text_theme"
            android:text="@string/login_now"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister"
            app:layout_constraintLeft_toRightOf="@+id/tvExistAccount"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/OnClick"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>