<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="data"
            type="com.king.easychat.bean.Group" />
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/toolbar"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvLabelAvatar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_80dp"
                android:text="@string/avatar"
                android:textColor="@color/text_6"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/size_12dp"
                android:paddingBottom="@dimen/size_12dp"
                android:paddingLeft="@dimen/size_16dp"
                android:paddingRight="@dimen/size_16dp"
                android:drawablePadding="@dimen/size_4dp"
                android:drawableRight="@drawable/ec_next"
                android:background="@drawable/white_selector"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/OnClick"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivAvatar"
                android:layout_width="@dimen/size_60dp"
                android:layout_height="@dimen/size_60dp"
                android:src="@drawable/default_avatar"
                android:layout_marginRight="@dimen/size_16dp"
                bind:avatar="@{data.avatar}"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/line"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/tvLabelAvatar"
                />
            <TextView
                android:id="@+id/tvLabelName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/group_name"
                android:textColor="@color/text_6"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/size_line"
                android:paddingTop="@dimen/size_12dp"
                android:paddingBottom="@dimen/size_12dp"
                android:paddingLeft="@dimen/size_16dp"
                android:paddingRight="@dimen/size_16dp"
                android:drawablePadding="@dimen/size_4dp"
                android:background="@drawable/white_selector"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelAvatar"
                style="@style/OnClick"/>
            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/size_16dp"
                android:textColor="@color/text_80"
                android:gravity="center_vertical"
                android:text="@{data.groupName}"
                tools:text="艾欧尼亚"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelAvatar"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/tvLabelName"/>
            <TextView
                android:id="@+id/tvLabelGroupId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/group_id"
                android:textColor="@color/text_6"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/size_line"
                android:paddingTop="@dimen/size_12dp"
                android:paddingBottom="@dimen/size_12dp"
                android:paddingLeft="@dimen/size_16dp"
                android:paddingRight="@dimen/size_16dp"
                android:drawablePadding="@dimen/size_4dp"
                android:background="@drawable/white_selector"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelName"
                style="@style/OnClick"/>
            <TextView
                android:id="@+id/tvGroupId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/size_16dp"
                android:textColor="@color/text_80"
                android:gravity="center_vertical"
                android:text="@{data.groupId}"
                tools:text="1001"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelName"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/tvLabelGroupId"/>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_20dp"
                android:layout_marginRight="@dimen/size_20dp"
                android:layout_marginTop="@dimen/size_30dp"
                android:textColor="@color/white"
                android:text="@string/invite_group"
                android:textSize="@dimen/size_16sp"
                android:background="@drawable/btn_bg_selector"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelGroupId"
                style="?android:attr/borderlessButtonStyle"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>
